tests/NormalTests/paczka1/fuzzy1/20147903.err
Error in line 11: LIE3 A475 4,2
Error in line 27: AN7Y0pjN S743 3,7
Error in line 22: 1v8 S743 20,1
Error in line 34: AN7Y0pjN A475 63,9
